Build the Badges component.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,9 @@ html {
     font-size: 62.5%;
 }
 :root {
-    --color-primary: #2584ff;
-    --color-secondary: #00d9ff;
+    
+    --color-primary: #00d9ff;
+    --color-secondary: #2584ff;
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4; 
@@ -83,3 +84,34 @@ a {
         font-size: 1.5rem;
     }
 }
+
+/*Badge*/
+.badge {
+    border-radius: 20px;
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 0.5rem 2rem;
+    white-space: nowrap;
+}
+
+.badge--primary {
+    background-color: var(--color-primary);
+    color: #fff;
+}
+.badge--secondary{
+    background-color: var(--color-secondary);
+    color: #fff;
+    
+}
+
+.badge--small {
+    font-size: 1.6rem;
+}
+
+@media screen and (min-width:1024px) {
+    .badge{
+        font-size: 1.5rem;
+    }
+    .badge--small {
+        font-size: 1.2rem;
+    }}
