--- a/css/styles.css
+++ b/css/styles.css
@@ -233,3 +233,23 @@ a {
     }
   }
   
+
+  /* Input */
+  .input {
+    padding: 1.5rem 3.5rem;
+    border: 1px solid #ccc;
+    border-radius:  30px;
+    outline: 0;
+    color: var(--color-headings);
+  }
+
+  ::placeholder {
+    color: #cdcbd7;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .input {
+      font-size: 1.5rem;
+    }
+  }
+  
