BUild the Callout Component

--- a/components/testmonial.html
+++ b/components/testmonial.html
@@ -1,4 +1,6 @@
-<div class="card testmonial">
+
+<body style="padding: 5rem;">
+    <div class="card testmonial">
     <div class="grid grid--1x2">
         <div class="testmonial__image">
             <img  src="images/testimonial.jpg" alt="A happy, smilling customer">
@@ -11,3 +13,4 @@
         <div style="height: 100px; background:gold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel incidunt fugit tempore quibusdam, quia, repudiandae nulla nihil dicta asperiores quam odio optio unde reiciendis perferendis reprehenderit harum? Consectetur illo eligendi explicabo incidunt minus doloribus iusto odit itaque adipisci, quae iste enim qui deleniti tempore voluptatum ipsam impedit quisquam ullam rerum!</div>
     </div>
 </div>
+</body>
