--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ html {
 }
 :root {
     
-    --color-primary: #00d9ff;
-    --color-secondary: #2584ff;
+    --color-secondary: #00d9ff;
+    --color-primary: #2584ff;
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4; 
@@ -235,6 +235,11 @@ a {
     background: var(--color-headings);
     color: #fff;
   }
+
+  .btn--stretched{
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
   
   .btn--block {
     width: 100%;
@@ -343,4 +348,47 @@ a {
     position: absolute;
     top: 3rem;
     right: -32px;
+  }
+
+
+  /* Callouts */
+  .callout {
+    padding: 4rem;
+    border-radius: 5px;
+  }
+
+  .callout--primary{
+    background: var(--color-primary);
+    color: #fff;
+  }
+  .callout__heading {
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+  }
+  /* .grid {
+    display: grid;
+    justify-items: center;
+    align-items: stretch    ;
+  } */
+
+  .callout .btn {
+    justify-self: center;
+    align-self: center;
+  }
+  .callout__content {
+    text-align: center  ;
+  }
+
+  @media screen and (min-width:768px) {
+    .callout .grid--1x2 {
+        grid-template-columns: 1fr auto;
+    }
+    .callout__content {
+        text-align: left;
+    }
+    .callout .btn {
+        justify-self: center;
+        margin: 0 2rem;
+    }
   }
